@@ -1,3 +1,9 @@
+Wed Sep 24 18:01:06 2003  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: add some extra anality to the slave when looking
+	  at the session name supplied in .dmrc, and also be careful about
+	  what we read as the user pic.
+
 Wed Sep 24 16:34:02 2003  George Lebl <jirka@5z.com>
 
 	* gui/greeter/greeter_item_pam.c, gui/greeter/greeter_geometry.c,
